--- a/public__register.html
+++ b/public__register.html
@@ -1508,7 +1508,7 @@
                     <!-- ./ 모바일 자산 및 부채 현황 데이터 슬라이드 제목 -->
                     <!-- 모바일 자산 및 부채 현황 데이터 슬라이드 내용 -->
                     <div class="mo__slide min__h__58">
-                      <table>
+                      <table class="mo__slide-active">
                         <caption>자산 및 부채현황 내용</caption>
                         <tbody>
                           <tr class="style1">
@@ -1611,7 +1611,7 @@
                     <!-- ./ 모바일 수입현황 데이터 슬라이드 제목 -->
                     <!-- 모바일 수입현황 데이터 슬라이드 내용 -->
                     <div class="mo__slide min__h__58">
-                      <table>
+                      <table class="mo__slide-active">
                         <caption>
                           수입 현황 부채현황
                         </caption>
@@ -1755,7 +1755,7 @@
                     <!--  ./ 모바일 지출현황 데이터 슬라이드 제목 -->
                     <!--  모바일 지출현황 데이터 슬라이드 내용 -->
                     <div class="mo__slide min__h__58">
-                      <table>
+                      <table class="mo__slide-active">
                         <caption>지출현황</caption>
                           <tbody>
                             <!-- 총계 -->
