--- a/sub1__1.html
+++ b/sub1__1.html
@@ -507,8 +507,9 @@
               <!-- 모바일 자산 및 부채 현황  -->
               <div class="dis__info first__mo">
                 <!-- 모바일 데이터 슬라이드 -->
-                <div class="data--open first">
+                <div class="data--open flex--box-c first">
                   <span class="data__toggle">자산 및 부채현황</span>
+                  <span class="data--openTotal">230,000,000</span>
                   <div class="arrow__wrap">
                     <span class="arrow__top"></span>
                     <span class="arrow__bottom"></span>
@@ -519,7 +520,7 @@
                     <caption>자산 및 부채현황 모바일 표 데이터</caption>
                     <tbody>
                       <!-- 총계 -->
-                      <tr class="style1">
+                      <tr>
                         <th class="t__title arrow">
                           ⓐ총계(=ⓑ+ⓒ+ⓓ+ⓔ)
                           <span>100,000,000</span>
@@ -588,8 +589,9 @@
               </div>
               <!-- 모바일 수입 현황  -->
               <div class="dis__info">
-                <div class="data--open">
+                <div class="data--open flex--box-c">
                   <span class="data__toggle">수입현황</span>
+                  <span class="data--openTotal">350,000,000</span>
                   <div class="arrow__wrap">
                     <span class="arrow__top"></span>
                     <span class="arrow__bottom"></span>
@@ -601,11 +603,10 @@
                     <caption>수입 현황 부채현황</caption>
                     <tbody>
                       <!-- 총계 -->
-                      <tr class="style1">
-                        <th class="t__title">ⓐ총계(=ⓑ+ⓒ+ⓓ+ⓔ)</th>
-                        <td><span class="sub__title">수입총계</span><span>1,469,246</span></td>
+                      <tr>
+                        <th class="t__title arrow">ⓐ총계(=ⓑ+ⓒ+ⓓ+ⓔ)<span>100,000,000</span></th>
                         <td><span class="sub__title">전년도 이월금</span><span>1,469,246</span></td>
-                        <td class="sub__element"><span>당기수입<span class="child__arrow"></span></span></td>
+                        <td class="sub__t__title"><span>당기수입</span></td>
                         <td><span class="sub__title">조합비</span><span>1,469,246</td>
                         <td><span class="sub__title">상급단체교부급</span><span>1,469,246</span></td>
                         <td><span class="sub__title">하부조직교부급</span><span>1,469,246</span></td>
@@ -617,10 +618,9 @@
                       </tr>
                       <!-- 일반회계 -->
                       <tr>
-                        <th class="t__title">ⓑ일반회계</th>
-                        <td><span class="sub__title">수입총계</span><span>1,469,246</span></td>
+                        <th class="t__title arrow">ⓑ일반회계<span>100,000,000</span></th>
                         <td><span class="sub__title">전년도 이월금</span><span>1,469,246</span></td>
-                        <td class="sub__element"><span>당기수입<span class="child__arrow"></span></span></td>
+                        <td class="sub__t__title"><span>당기수입</span></td>
                         <td><span class="sub__title">조합비</span><span>1,469,246</td>
                         <td><span class="sub__title">상급단체교부급</span><span>1,469,246</span></td>
                         <td><span class="sub__title">하부조직교부급</span><span>1,469,246</span></td>
@@ -632,10 +632,9 @@
                       </tr>
                       <!-- 특별회계 -->
                       <tr>
-                        <th class="t__title">ⓒ특별회계</th>
-                        <td><span class="sub__title">수입총계</span><span>1,469,246</span></td>
+                        <th class="t__title arrow">ⓒ특별회계<span>100,000,000</span></th>
                         <td><span class="sub__title">전년도 이월금</span><span>1,469,246</span></td>
-                        <td class="sub__element"><span>당기수입<span class="child__arrow"></span></span></td>
+                        <td class="sub__t__title"><span>당기수입</span></td>
                         <td><span class="sub__title">조합비</span><span>1,469,246</td>
                         <td><span class="sub__title">상급단체교부급</span><span>1,469,246</span></td>
                         <td><span class="sub__title">하부조직교부급</span><span>1,469,246</span></td>
@@ -647,10 +646,9 @@
                       </tr>
                       <!-- 보조금사업회계 -->
                       <tr>
-                        <th class="t__title">ⓓ보조금사업회계</th>
-                        <td><span class="sub__title">수입총계</span><span>1,469,246</span></td>
+                        <th class="t__title arrow">ⓓ보조금사업회계<span>100,000,000</span></th>
                         <td><span class="sub__title">전년도 이월금</span><span>1,469,246</span></td>
-                        <td class="sub__element"><span>당기수입<span class="child__arrow"></span></span></td>
+                        <td class="sub__t__title"><span>당기수입</span></td>
                         <td><span class="sub__title">조합비</span><span>1,469,246</td>
                         <td><span class="sub__title">상급단체교부급</span><span>1,469,246</span></td>
                         <td><span class="sub__title">하부조직교부급</span><span>1,469,246</span></td>
@@ -662,10 +660,9 @@
                       </tr>
                       <!-- 수익사업회계 -->
                       <tr>
-                        <th class="t__title">ⓔ수익사업회계</th>
-                        <td><span class="sub__title">수입총계</span><span>1,469,246</span></td>
+                        <th class="t__title arrow">ⓔ수익사업회계<span>100,000,000</span></th>
                         <td><span class="sub__title">전년도 이월금</span><span>1,469,246</span></td>
-                        <td class="sub__element"><span>당기수입<span class="child__arrow"></span></span></td>
+                        <td class="sub__t__title"><span>당기수입</span></td>
                         <td><span class="sub__title">조합비</span><span>1,469,246</td>
                         <td><span class="sub__title">상급단체교부급</span><span>1,469,246</span></td>
                         <td><span class="sub__title">하부조직교부급</span><span>1,469,246</span></td>
@@ -681,8 +678,9 @@
               </div>
               <div class="dis__info">
                 <!-- 모바일 지출 현황 데이터 슬라이드 제목 -->
-                <div class="data--open last--open">
+                <div class="data--open flex--box-c last--open">
                   <span class="data__toggle">지출현황</span>
+                  <span class="data--openTotal">230,000,000</span>
                   <div class="arrow__wrap">
                     <span class="arrow__top"></span>
                     <span class="arrow__bottom"></span>
@@ -694,101 +692,96 @@
                   <table>
                     <caption>지출현황</caption>
                     <tbody>
-                      <tr class="style1">
-                        <th class="t__title">ⓐ총계(=ⓑ+ⓒ+ⓓ+ⓔ)</th>
-                        <td><span class="sub__title">지출총계</span><span>1,469,246</span></td>
-                        <td class="sub__element"><span>당기지출<span class="child__arrow"></span>일반관리비용</span></td>
+                      <tr>
+                        <th class="t__title arrow">ⓐ총계(=ⓑ+ⓒ+ⓓ+ⓔ)<span>100,000,000</span></th>
+                        <td class="sub__t__title"><span>당기지출<span class="child__arrow"></span>일반관리비용</span></td>
                         <td><span class="sub__title">(1)인권비</span><span>1,469,246</span></td>
                         <td><span class="sub__title">(2)업무추진비</span><span>1,469,246</span></td>
                         <td><span class="sub__title">(3)기타운영비</span><span>1,469,246</span></td>
-                        <td class="sub__element"><span>당기지출<span class="child__arrow"></span>사업수행비용</span></td>
+                        <td class="sub__t__title"><span>당기지출<span class="child__arrow"></span>사업수행비용</span></td>
                         <td><span class="sub__title">(1)총회등대회비</span><span>1,469,246</span></td>
                         <td><span class="sub__title">(2)조직사업비</span><span>1,469,246</span></td>
                         <td><span class="sub__title">(3)정책사업비</span><span>1,469,246</span></td>
                         <td><span class="sub__title">(4)교육홍보사업비</span><span>1,469,246</span></td>
                         <td><span class="sub__title">(5)교섭쟁의사업비</span><span>1,469,246</span></td>
                         <td><span class="sub__title">(6)기타사업비</span><span>1,469,246</span></td>
-                        <td class="sub__element"><span>당기수입<span class="child__arrow"></span></span></td>
+                        <td class="sub__t__title"><span>당기수입</span></td>
                         <td><span class="sub__title">상급단체부과금</span><span>1,469,246</span></td>
                         <td><span class="sub__title">하부조직교부금</span><span>1,469,246</span></td>
                         <td><span class="sub__title">타회계전출금</span><span>1,469,246</span></td>
                         <td><span class="sub__title">기타</span><span>1,469,246</span></td>
                       </tr>
                       <tr>
-                        <th class="t__title">ⓑ일반회계</th>
-                        <td><span class="sub__title">지출총계</span><span>1,469,246</span></td>
-                        <td class="sub__element"><span>당기지출<span class="child__arrow"></span>일반관리비용</span></td>
+                        <th class="t__title arrow">ⓑ일반회계<span>100,000,000</span></th>
+                        <td class="sub__t__title"><span>당기지출<span class="child__arrow"></span>일반관리비용</span></td>
                         <td><span class="sub__title">(1)인권비</span><span>1,469,246</span></td>
                         <td><span class="sub__title">(2)업무추진비</span><span>1,469,246</span></td>
                         <td><span class="sub__title">(3)기타운영비</span><span>1,469,246</span></td>
-                        <td class="sub__element"><span>당기지출<span class="child__arrow"></span>사업수행비용</span></td>
+                        <td class="sub__t__title"><span>당기지출<span class="child__arrow"></span>사업수행비용</span></td>
                         <td><span class="sub__title">(1)총회등대회비</span><span>1,469,246</span></td>
                         <td><span class="sub__title">(2)조직사업비</span><span>1,469,246</span></td>
                         <td><span class="sub__title">(3)정책사업비</span><span>1,469,246</span></td>
                         <td><span class="sub__title">(4)교육홍보사업비</span><span>1,469,246</span></td>
                         <td><span class="sub__title">(5)교섭쟁의사업비</span><span>1,469,246</span></td>
                         <td><span class="sub__title">(6)기타사업비</span><span>1,469,246</span></td>
-                        <td class="sub__element"><span>당기수입<span class="child__arrow"></span></span></td>
+                        <td class="sub__t__title"><span>당기수입</span></td>
                         <td><span class="sub__title">상급단체부과금</span><span>1,469,246</span></td>
                         <td><span class="sub__title">하부조직교부금</span><span>1,469,246</span></td>
                         <td><span class="sub__title">타회계전출금</span><span>1,469,246</span></td>
                         <td><span class="sub__title">기타</span><span>1,469,246</span></td>
                       </tr>
                       <tr>
-                        <th class="t__title">ⓒ특별회계</th>
-                        <td><span class="sub__title">지출총계</span><span>1,469,246</span></td>
-                        <td class="sub__element"><span>당기지출<span class="child__arrow"></span>일반관리비용</span></td>
+                        <th class="t__title arrow">ⓒ특별회계<span>100,000,000</span></th>
+                        <td class="sub__t__title"><span>당기지출<span class="child__arrow"></span>일반관리비용</span></td>
                         <td><span class="sub__title">(1)인권비</span><span>1,469,246</span></td>
                         <td><span class="sub__title">(2)업무추진비</span><span>1,469,246</span></td>
                         <td><span class="sub__title">(3)기타운영비</span><span>1,469,246</span></td>
-                        <td class="sub__element"><span>당기지출<span class="child__arrow"></span>사업수행비용</span></td>
+                        <td class="sub__t__title"><span>당기지출<span class="child__arrow"></span>사업수행비용</span></td>
                         <td><span class="sub__title">(1)총회등대회비</span><span>1,469,246</span></td>
                         <td><span class="sub__title">(2)조직사업비</span><span>1,469,246</span></td>
                         <td><span class="sub__title">(3)정책사업비</span><span>1,469,246</span></td>
                         <td><span class="sub__title">(4)교육홍보사업비</span><span>1,469,246</span></td>
                         <td><span class="sub__title">(5)교섭쟁의사업비</span><span>1,469,246</span></td>
                         <td><span class="sub__title">(6)기타사업비</span><span>1,469,246</span></td>
-                        <td class="sub__element"><span>당기수입<span class="child__arrow"></span></span></td>
+                        <td class="sub__t__title"><span>당기수입</span></td>
                         <td><span class="sub__title">상급단체부과금</span><span>1,469,246</span></td>
                         <td><span class="sub__title">하부조직교부금</span><span>1,469,246</span></td>
                         <td><span class="sub__title">타회계전출금</span><span>1,469,246</span></td>
                         <td><span class="sub__title">기타</span><span>1,469,246</span></td>
                       </tr>
                       <tr>
-                        <th class="t__title">ⓓ보조금사업회계</th>
-                        <td><span class="sub__title">지출총계</span><span>1,469,246</span></td>
-                        <td class="sub__element"><span>당기지출<span class="child__arrow"></span>일반관리비용</span></td>
+                        <th class="t__title arrow">ⓓ보조금사업회계<span>100,000,000</span></th>
+                        <td class="sub__t__title"><span>당기지출<span class="child__arrow"></span>일반관리비용</span></td>
                         <td><span class="sub__title">(1)인권비</span><span>1,469,246</span></td>
                         <td><span class="sub__title">(2)업무추진비</span><span>1,469,246</span></td>
                         <td><span class="sub__title">(3)기타운영비</span><span>1,469,246</span></td>
-                        <td class="sub__element"><span>당기지출<span class="child__arrow"></span>사업수행비용</span></td>
+                        <td class="sub__t__title"><span>당기지출<span class="child__arrow"></span>사업수행비용</span></td>
                         <td><span class="sub__title">(1)총회등대회비</span><span>1,469,246</span></td>
                         <td><span class="sub__title">(2)조직사업비</span><span>1,469,246</span></td>
                         <td><span class="sub__title">(3)정책사업비</span><span>1,469,246</span></td>
                         <td><span class="sub__title">(4)교육홍보사업비</span><span>1,469,246</span></td>
                         <td><span class="sub__title">(5)교섭쟁의사업비</span><span>1,469,246</span></td>
                         <td><span class="sub__title">(6)기타사업비</span><span>1,469,246</span></td>
-                        <td class="sub__element"><span>당기수입<span class="child__arrow"></span></span></td>
+                        <td class="sub__t__title"><span>당기수입</span></td>
                         <td><span class="sub__title">상급단체부과금</span><span>1,469,246</span></td>
                         <td><span class="sub__title">하부조직교부금</span><span>1,469,246</span></td>
                         <td><span class="sub__title">타회계전출금</span><span>1,469,246</span></td>
                         <td><span class="sub__title">기타</span><span>1,469,246</span></td>
                       </tr>
                       <tr>
-                        <th class="t__title">ⓔ수익사업회계</th>
-                        <td><span class="sub__title">지출총계</span><span>1,469,246</span></td>
-                        <td class="sub__element"><span>당기지출<span class="child__arrow"></span>일반관리비용</span></td>
+                        <th class="t__title arrow">ⓔ수익사업회계<span>100,000,000</span></th>
+                        <td class="sub__t__title"><span>당기지출<span class="child__arrow"></span>일반관리비용</span></td>
                         <td><span class="sub__title">(1)인권비</span><span>1,469,246</span></td>
                         <td><span class="sub__title">(2)업무추진비</span><span>1,469,246</span></td>
                         <td><span class="sub__title">(3)기타운영비</span><span>1,469,246</span></td>
-                        <td class="sub__element"><span>당기지출<span class="child__arrow"></span>사업수행비용</span></td>
+                        <td class="sub__t__title"><span>당기지출<span class="child__arrow"></span>사업수행비용</span></td>
                         <td><span class="sub__title">(1)총회등대회비</span><span>1,469,246</span></td>
                         <td><span class="sub__title">(2)조직사업비</span><span>1,469,246</span></td>
                         <td><span class="sub__title">(3)정책사업비</span><span>1,469,246</span></td>
                         <td><span class="sub__title">(4)교육홍보사업비</span><span>1,469,246</span></td>
                         <td><span class="sub__title">(5)교섭쟁의사업비</span><span>1,469,246</span></td>
                         <td><span class="sub__title">(6)기타사업비</span><span>1,469,246</span></td>
-                        <td class="sub__element"><span>당기수입<span class="child__arrow"></span></span></td>
+                        <td class="sub__t__title"><span>당기수입</span></td>
                         <td><span class="sub__title">상급단체부과금</span><span>1,469,246</span></td>
                         <td><span class="sub__title">하부조직교부금</span><span>1,469,246</span></td>
                         <td><span class="sub__title">타회계전출금</span><span>1,469,246</span></td>
@@ -831,7 +824,7 @@
                       </tr>
                     </thead>
                     <tbody>
-                      <tr class="style1">
+                      <tr>
                         <th scope="row"><div class="min__h__box text--l">ⓐ총계(=ⓑ+ⓒ+ⓓ+ⓔ)</div></th>
                         <td><div class="min__h__box text--r">20,000,000</div></td>
                         <td><div class="min__h__box text--r">2</div></td>
@@ -923,7 +916,7 @@
                       </tr>
                     </thead>
                     <tbody>
-                      <tr class="style1">
+                      <tr>
                         <th scope="row"><div class="min__h__box text--l">ⓐ총계(=ⓑ+ⓒ+ⓓ+ⓔ)</div></th>
                         <td><div class="min__h__box text--r">20,000,000</div></td>
                         <td><div class="min__h__box text--r">20,000,000</div></td>
