--- a/sub1__1.html
+++ b/sub1__1.html
@@ -694,8 +694,8 @@
                     <tbody>
                       <tr>
                         <th class="t__title arrow">ⓐ총계(=ⓑ+ⓒ+ⓓ+ⓔ)<span>10,000,000</span></th>
-                        <td class="sub__t__title"><span>당기지출<span class="child__arrow"></span>일반관리비용</span><span class="sub__t__total">10,000,000</span></td>
-                        <td><span class="sub__title">(1)인권비</span><span>10,000,000</span></td>
+                        <td class="sub__t__title"><span>당기지출</td>
+                        <td><span class="sub__title">상급단체부과금</span><span>10,000,000</span></td>
                         <td><span class="sub__title">(2)업무추진비</span><span>10,000,000</span></td>
                         <td><span class="sub__title">(3)기타운영비</span><span>10,000,000</span></td>
                         <td class="sub__t__title"><span>당기지출<span class="child__arrow"></span>사업수행비용</span><span class="sub__t__total">10,000,000</span></td>
