될대로 되라

--- a/sub1__1.html
+++ b/sub1__1.html
@@ -609,9 +609,9 @@
                         <td class="depth-1"><span class="sub__title">전년도 이월금</span><span class="mr--24">20,000,000</span></td>
                         <td class="depth-1 sub__t__title"><span>당기수입</span><span class="sub__t__total">20,000,000</span></td>
                         <td class="depth-2"><span class="sub__title">조합비</span><span>20,000,000</td>
-                        <td class="depth-2"><span class="sub__title">상급단체교부급</span><span>20,000,000</span></td>
-                        <td class="depth-2"><span class="sub__title">하부조직교부급</span><span>20,000,000</span></td>
-                        <td class="depth-2"><span class="sub__title">후원급</span><span>20,000,000</span></td>
+                        <td class="depth-2"><span class="sub__title">상급단체교부금</span><span>20,000,000</span></td>
+                        <td class="depth-2"><span class="sub__title">하부조직부과금</span><span>20,000,000</span></td>
+                        <td class="depth-2"><span class="sub__title">후원금</span><span>20,000,000</span></td>
                         <td class="depth-2"><span class="sub__title">타회계 전임금</span><span>20,000,000</span></td>
                         <td class="depth-2"><span class="sub__title">보조금 수입</span><span>20,000,000</span></td>
                         <td class="depth-2"><span class="sub__title">수익사업 수입</span><span>20,000,000</span></td>
@@ -623,9 +623,9 @@
                         <td class="depth-1"><span class="sub__title">전년도 이월금</span><span class="mr--24">20,000,000</span></td>
                         <td class="depth-1 sub__t__title"><span>당기수입</span><span class="sub__t__total">20,000,000</span></td>
                         <td class="depth-2"><span class="sub__title">조합비</span><span>20,000,000</td>
-                        <td class="depth-2"><span class="sub__title">상급단체교부급</span><span>20,000,000</span></td>
-                        <td class="depth-2"><span class="sub__title">하부조직교부급</span><span>20,000,000</span></td>
-                        <td class="depth-2"><span class="sub__title">후원급</span><span>20,000,000</span></td>
+                        <td class="depth-2"><span class="sub__title">상급단체교부금</span><span>20,000,000</span></td>
+                        <td class="depth-2"><span class="sub__title">하부조직부과금</span><span>20,000,000</span></td>
+                        <td class="depth-2"><span class="sub__title">후원금</span><span>20,000,000</span></td>
                         <td class="depth-2"><span class="sub__title">타회계 전임금</span><span>20,000,000</span></td>
                         <td class="depth-2"><span class="sub__title">보조금 수입</span><span>20,000,000</span></td>
                         <td class="depth-2"><span class="sub__title">수익사업 수입</span><span>20,000,000</span></td>
@@ -637,9 +637,9 @@
                         <td class="depth-1"><span class="sub__title">전년도 이월금</span><span class="mr--24">20,000,000</span></td>
                         <td class="depth-1 sub__t__title"><span>당기수입</span><span class="sub__t__total">20,000,000</span></td>
                         <td class="depth-2"><span class="sub__title">조합비</span><span>20,000,000</td>
-                        <td class="depth-2"><span class="sub__title">상급단체교부급</span><span>20,000,000</span></td>
-                        <td class="depth-2"><span class="sub__title">하부조직교부급</span><span>20,000,000</span></td>
-                        <td class="depth-2"><span class="sub__title">후원급</span><span>20,000,000</span></td>
+                        <td class="depth-2"><span class="sub__title">상급단체교부금</span><span>20,000,000</span></td>
+                        <td class="depth-2"><span class="sub__title">하부조직부과금</span><span>20,000,000</span></td>
+                        <td class="depth-2"><span class="sub__title">후원금</span><span>20,000,000</span></td>
                         <td class="depth-2"><span class="sub__title">타회계 전임금</span><span>20,000,000</span></td>
                         <td class="depth-2"><span class="sub__title">보조금 수입</span><span>20,000,000</span></td>
                         <td class="depth-2"><span class="sub__title">수익사업 수입</span><span>20,000,000</span></td>
@@ -651,9 +651,9 @@
                         <td class="depth-1"><span class="sub__title">전년도 이월금</span><span class="mr--24">20,000,000</span></td>
                         <td class="depth-1 sub__t__title"><span>당기수입</span><span class="sub__t__total">20,000,000</span></td>
                         <td class="depth-2"><span class="sub__title">조합비</span><span>20,000,000</td>
-                        <td class="depth-2"><span class="sub__title">상급단체교부급</span><span>20,000,000</span></td>
-                        <td class="depth-2"><span class="sub__title">하부조직교부급</span><span>20,000,000</span></td>
-                        <td class="depth-2"><span class="sub__title">후원급</span><span>20,000,000</span></td>
+                        <td class="depth-2"><span class="sub__title">상급단체교부금</span><span>20,000,000</span></td>
+                        <td class="depth-2"><span class="sub__title">하부조직부과금</span><span>20,000,000</span></td>
+                        <td class="depth-2"><span class="sub__title">후원금</span><span>20,000,000</span></td>
                         <td class="depth-2"><span class="sub__title">타회계 전임금</span><span>20,000,000</span></td>
                         <td class="depth-2"><span class="sub__title">보조금 수입</span><span>20,000,000</span></td>
                         <td class="depth-2"><span class="sub__title">수익사업 수입</span><span>20,000,000</span></td>
@@ -665,9 +665,9 @@
                         <td class="depth-1"><span class="sub__title">전년도 이월금</span><span class="mr--24">20,000,000</span></td>
                         <td class="depth-1 sub__t__title"><span>당기수입</span><span class="sub__t__total">20,000,000</span></td>
                         <td class="depth-2"><span class="sub__title">조합비</span><span>20,000,000</td>
-                        <td class="depth-2"><span class="sub__title">상급단체교부급</span><span>20,000,000</span></td>
-                        <td class="depth-2"><span class="sub__title">하부조직교부급</span><span>20,000,000</span></td>
-                        <td class="depth-2"><span class="sub__title">후원급</span><span>20,000,000</span></td>
+                        <td class="depth-2"><span class="sub__title">상급단체교부금</span><span>20,000,000</span></td>
+                        <td class="depth-2"><span class="sub__title">하부조직부과금</span><span>20,000,000</span></td>
+                        <td class="depth-2"><span class="sub__title">후원금</span><span>20,000,000</span></td>
                         <td class="depth-2"><span class="sub__title">타회계 전임금</span><span>20,000,000</span></td>
                         <td class="depth-2"><span class="sub__title">보조금 수입</span><span>20,000,000</span></td>
                         <td class="depth-2"><span class="sub__title">수익사업 수입</span><span>20,000,000</span></td>
@@ -702,7 +702,11 @@
                       <tr>
                         <th class="t__title arrow">ⓐ총계(=ⓑ+ⓒ+ⓓ+ⓔ)<span>10,000,000</span></th>
                         <!-- depth-1 -->
-                        <td class="sub__t__title depth-1"><span>당기지출</td>
+                        <td class="sub__t__title depth-1">
+                          <span>당기지출</span>
+                          <!-- 당기지출 총합 수입처럼 표기 원할 시 주석 해제
+                          <span class="sub__t__total">20,000,000</span> -->
+                        </td>
                         <!-- .// depth-1 -->
                         <!-- depth-2 -->
                         <td class="sub__t__title depth-2"><span class="sub__title">일반관리비용</span><span></span></td>
@@ -725,7 +729,7 @@
                         <!-- .// depth 3 -->
                         <!-- depth 2 -->
                         <td class="depth-2"><span class="sub__title">상급단체부과금</span><span>10,000,000</span></td>
-                        <td class="depth-2"><span class="sub__title">하부조직부과금</span><span>10,000,000</span></td>
+                        <td class="depth-2"><span class="sub__title">하부조직교부금</span><span>10,000,000</span></td>
                         <td class="depth-2"><span class="sub__title">타회계전출금</span><span>10,000,000</span></td>
                         <td class="depth-2"><span class="sub__title">기타</span><span>10,000,000</span></td>
                         <!-- .// depth 2 -->
@@ -736,7 +740,11 @@
                       <tr>
                         <th class="t__title arrow">ⓑ일반회계<span>10,000,000</span></th>
                         <!-- depth-1 -->
-                        <td class="sub__t__title depth-1"><span>당기지출</td>
+                        <td class="sub__t__title depth-1">
+                          <span>당기지출</span>
+                          <!-- 당기지출 총합 수입처럼 표기 원할 시 주석 해제
+                          <span class="sub__t__total">20,000,000</span> -->
+                        </td>
                         <!-- .// depth-1 -->
                         <!-- depth-2 -->
                         <td class="sub__t__title depth-2"><span class="sub__title">일반관리비용</span><span></span></td>
@@ -759,7 +767,7 @@
                         <!-- .// depth 3 -->
                         <!-- depth 2 -->
                         <td class="depth-2"><span class="sub__title">상급단체부과금</span><span>10,000,000</span></td>
-                        <td class="depth-2"><span class="sub__title">하부조직부과금</span><span>10,000,000</span></td>
+                        <td class="depth-2"><span class="sub__title">하부조직교부금</span><span>10,000,000</span></td>
                         <td class="depth-2"><span class="sub__title">타회계전출금</span><span>10,000,000</span></td>
                         <td class="depth-2"><span class="sub__title">기타</span><span>10,000,000</span></td>
                         <!-- .// depth 2 -->
@@ -770,7 +778,11 @@
                       <tr>
                         <th class="t__title arrow">ⓒ특별회계<span>10,000,000</span></th>
                         <!-- depth-1 -->
-                        <td class="sub__t__title depth-1"><span>당기지출</td>
+                        <td class="sub__t__title depth-1">
+                          <span>당기지출</span>
+                          <!-- 당기지출 총합 수입처럼 표기 원할 시 주석 해제
+                          <span class="sub__t__total">20,000,000</span> -->
+                        </td>
                         <!-- .// depth-1 -->
                         <!-- depth-2 -->
                         <td class="sub__t__title depth-2"><span class="sub__title">일반관리비용</span><span></span></td>
@@ -793,7 +805,7 @@
                         <!-- .// depth 3 -->
                         <!-- depth 2 -->
                         <td class="depth-2"><span class="sub__title">상급단체부과금</span><span>10,000,000</span></td>
-                        <td class="depth-2"><span class="sub__title">하부조직부과금</span><span>10,000,000</span></td>
+                        <td class="depth-2"><span class="sub__title">하부조직교부금</span><span>10,000,000</span></td>
                         <td class="depth-2"><span class="sub__title">타회계전출금</span><span>10,000,000</span></td>
                         <td class="depth-2"><span class="sub__title">기타</span><span>10,000,000</span></td>
                         <!-- .// depth 2 -->
@@ -804,7 +816,11 @@
                       <tr>
                         <th class="t__title arrow">ⓓ보조금사업회계<span>10,000,000</span></th>
                         <!-- depth-1 -->
-                        <td class="sub__t__title depth-1"><span>당기지출</td>
+                        <td class="sub__t__title depth-1">
+                          <span>당기지출</span>
+                          <!-- 당기지출 총합 수입처럼 표기 원할 시 주석 해제
+                          <span class="sub__t__total">20,000,000</span> -->
+                        </td>
                         <!-- .// depth-1 -->
                         <!-- depth-2 -->
                         <td class="sub__t__title depth-2"><span class="sub__title">일반관리비용</span><span></span></td>
@@ -827,7 +843,7 @@
                         <!-- .// depth 3 -->
                         <!-- depth 2 -->
                         <td class="depth-2"><span class="sub__title">상급단체부과금</span><span>10,000,000</span></td>
-                        <td class="depth-2"><span class="sub__title">하부조직부과금</span><span>10,000,000</span></td>
+                        <td class="depth-2"><span class="sub__title">하부조직교부금</span><span>10,000,000</span></td>
                         <td class="depth-2"><span class="sub__title">타회계전출금</span><span>10,000,000</span></td>
                         <td class="depth-2"><span class="sub__title">기타</span><span>10,000,000</span></td>
                         <!-- .// depth 2 -->
@@ -838,7 +854,11 @@
                       <tr>
                         <th class="t__title arrow">ⓔ수익사업회계<span>10,000,000</span></th>
                           <!-- depth-1 -->
-                          <td class="sub__t__title depth-1"><span>당기지출</td>
+                          <td class="sub__t__title depth-1">
+                            <span>당기지출</span>
+                            <!-- 당기지출 총합 수입처럼 표기 원할 시 주석 해제
+                            <span class="sub__t__total">20,000,000</span> -->
+                          </td>
                           <!-- .// depth-1 -->
                           <!-- depth-2 -->
                           <td class="sub__t__title depth-2"><span class="sub__title">일반관리비용</span><span></span></td>
@@ -861,7 +881,7 @@
                           <!-- .// depth 3 -->
                           <!-- depth 2 -->
                           <td class="depth-2"><span class="sub__title">상급단체부과금</span><span>10,000,000</span></td>
-                          <td class="depth-2"><span class="sub__title">하부조직부과금</span><span>10,000,000</span></td>
+                          <td class="depth-2"><span class="sub__title">하부조직교부금</span><span>10,000,000</span></td>
                           <td class="depth-2"><span class="sub__title">타회계전출금</span><span>10,000,000</span></td>
                           <td class="depth-2"><span class="sub__title">기타</span><span>10,000,000</span></td>
                           <!-- .// depth 2 -->
