default style 변경

--- a/sub1__1.html
+++ b/sub1__1.html
@@ -915,13 +915,13 @@
                       <col>
                     </colgroup>
                     <thead>
-                      <tr>
+                      <tr class="th-depth">
                         <th scope="col"><div class="min__h__box text--c">구분</div></th>
                         <th scope="col"><div class="min__h__box text--c">자산</div></th>
-                        <th scope="col"><div class="min__h__box text--c">현금및예금</div></th>
-                        <th scope="col"><div class="min__h__box text--c">토지</div></th>
-                        <th scope="col"><div class="min__h__box text--c">건물</div></th>
-                        <th scope="col"><div class="min__h__box text--c">기타자산</div></th>
+                        <th scope="col"><div class="min__h__box text--c"><p>현금및예금</p></div></th>
+                        <th scope="col"><div class="min__h__box text--c"><p>토지</p></div></th>
+                        <th scope="col"><div class="min__h__box text--c"><p>건물</p></div></th>
+                        <th scope="col"><div class="min__h__box text--c"><p>기타자산</p></div></th>
                         <th scope="col"><div class="min__h__box text--c">부채</div></th>
                       </tr>
                     </thead>
